assets/back/css/theme-customizer-control.css
/* OVERRIDE WP CUSTOMIZER */
/* LAYOUT */
.wp-customizer .wp-full-overlay.expanded {
  margin-left: 440px;
}
.wp-customizer .wp-full-overlay-sidebar {
  width: 440px;
}
.wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
  margin-left: -440px;
}
.in-sub-panel #customize-info,
.in-sub-panel #customize-theme-controls > ul > .accordion-section {
  left: -440px;
  width: 440px;
}
#customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
  left: -440px;
}
.accordion-sub-container.control-panel-content {
  left: 440px;
}

/* RTL*/
.rtl.wp-customizer .wp-full-overlay.expanded {
  margin-right: 440px;
  margin-left: 0;
}
.rtl.wp-customizer .wp-full-overlay-sidebar {
  width: 440px;
}
.rtl.wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
  margin-right: -440px;
  margin-left: 0;
}
.rtl .in-sub-panel #customize-info,
.rtl .in-sub-panel #customize-theme-controls > ul > .accordion-section {
  right: -440px;
  width: 440px;
}
.rtl #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
  right: -440px;
}
.rtl .accordion-sub-container.control-panel-content {
  right: 440px;
}


@media screen and (max-width: 1400px) {
  .wp-customizer .wp-full-overlay.expanded {
    margin-left: 380px;
  }
  .wp-customizer .wp-full-overlay-sidebar {
    width: 380px;
  }
  .wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
    margin-left: -380px;
  }
  .in-sub-panel #customize-info,
  .in-sub-panel #customize-theme-controls > ul > .accordion-section {
    left: -380px;
    width: 380px;
  }
  #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
    left: -380px;
  }
  .accordion-sub-container.control-panel-content {
    left: 380px;
  }
  .in-sub-panel #tc-donate-customizer,
  .in-sub-panel .tc-cta-wrap {
    left: -380px;
  }
  /* RTL */
  .rtl.wp-customizer .wp-full-overlay.expanded {
    margin-right: 380px;
    margin-left: 0;
  }
  .rtl.wp-customizer .wp-full-overlay-sidebar {
    width: 380px;
  }
  .rtl.wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
    margin-right: -380px;
    margin-left: 0;
  }
  .rtl .in-sub-panel #customize-info,
  .rtl .in-sub-panel #customize-theme-controls > ul > .accordion-section {
    right: -380px;
    width: 380px;
  }
  .rtl #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
    right: -380px;
  }
  .rtl .accordion-sub-container.control-panel-content {
    right: 380px;
  }
  .rtl .in-sub-panel #tc-donate-customizer,
  .rtl .in-sub-panel .tc-cta-wrap {
    right: -380px;
  }
}
@media screen and (max-width: 979px) {
  .wp-customizer .wp-full-overlay.expanded {
    margin-left: 300px;
  }
  .wp-customizer .wp-full-overlay-sidebar {
    width: 300px;
  }
  .wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
    margin-left: -300px;
  }
  .in-sub-panel #customize-info,
  .in-sub-panel #customize-theme-controls > ul > .accordion-section {
    left: -300px;
    width: 300px;
  }
  #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
    left: -300px;
  }
  .accordion-sub-container.control-panel-content {
    left: 300px;
  }
  .in-sub-panel #tc-donate-customizer,
  .in-sub-panel .tc-cta-wrap {
    left: -300px;
  }

  /* RTL */
  .rtl.wp-customizer .wp-full-overlay.expanded {
    margin-right: 300px;
    margin-left: 0;
  }
  .rtl.wp-customizer .wp-full-overlay-sidebar {
    width: 300px;
  }
  .rtl.wp-customizer .wp-full-overlay.collapsed .wp-full-overlay-sidebar {
    margin-right: -300px;
    margin-left: 0;
  }
  .rtl .in-sub-panel #customize-info,
  .rtl .in-sub-panel #customize-theme-controls > ul > .accordion-section {
    right: -300px;
    width: 300px;
  }
  .rtl #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
    right: -300px;
  }
  .rtl .accordion-sub-container.control-panel-content {
    right: 300px;
  }
  .rtl .in-sub-panel #tc-donate-customizer,
  .rtl .in-sub-panel .tc-cta-wrap {
    right: -300px;
  }
}


/* PANELS AND SECTIONS TITLES */
.wp-customizer #customize-theme-controls .accordion-section-title {
  color: #1ABC9C;
  font-size: 18px;
  font-weight: normal;
}
.wp-customizer .control-section.control-panel .accordion-section-title .panel-title {
  font-size: 24px;
  font-weight: inherit;
  line-height: 30px;
}

.wp-core-ui a {
	color: #1ABC9C;
}
.wp-core-ui .button-primary {
	background: #1ABC9C;
	border-color: #15AE90;
}
.wp-core-ui .button-primary.hover, .wp-core-ui .button-primary:hover, .wp-core-ui .button-primary.focus, .wp-core-ui .button-primary:focus {
	background: #15AE90;
	border-color: #15AE90;
}

.wp-core-ui .button-primary[disabled], .wp-core-ui .button-primary:disabled, .wp-core-ui .button-primary-disabled, .wp-core-ui .button-primary.disabled {
	color: #E5E5E5 !important;
	background: #15AE90 !important;
	border-color: #15AE90 !important;
}
.wp-core-ui h3 {
	color: #555;
}
.accordion-section-content {
	padding: 10px 10px 15px 20px;
}
.widget-action, .handlediv, .item-edit, .sidebar-name-arrow, .accordion-section-title:after {
	color: #1ABC9C;
}
.control-section.control-panel > .accordion-section-title:after {
	color: #1ABC9C;
}
.customize-control-title {
	line-height: 18px;
}

/* since v4.3 */
.wp-customizer #customize-theme-controls .accordion-section-content {
  background: #fff;
}
.wp-customizer .customize-panel-back {
  height: 60px;
}
.wp-customizer #customize-controls .customize-info .customize-help-toggle:hover, .wp-customizer #customize-controls .customize-info.open .customize-help-toggle, .wp-customizer #customize-controls .customize-info .customize-help-toggle:focus {
  color:#1ABC9C;
}
/* ... */

